#####################################################################################
# Copyright (C) by Nicholas LaCroix
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
# THE SOFTWARE.
#####################################################################################

header_files = [
  'LEB128.h',
  'MCDisassembler.h',
  'MCFixedLenDisassembler.h',
  'MCInst.h',
  'MCInstPrinter.h',
  'MCInstrDesc.h',
  'MCRegisterInfo.h',
  'Mapping.h',
  'MathExtras.h',
  'SStream.h',
  'arch/AArch64/AArch64AddressingModes.h',
  'arch/AArch64/AArch64BaseInfo.h',
  'arch/AArch64/AArch64DisassemblerExtension.h',
  'arch/AArch64/AArch64InstPrinter.h',
  'arch/AArch64/AArch64Linkage.h',
  'arch/AArch64/AArch64Mapping.h',
  'arch/AArch64/AArch64Module.h',
  'arch/ARM/ARMAddressingModes.h',
  'arch/ARM/ARMBaseInfo.h',
  'arch/ARM/ARMDisassemblerExtension.h',
  'arch/ARM/ARMInstPrinter.h',
  'arch/ARM/ARMLinkage.h',
  'arch/ARM/ARMMapping.h',
  'arch/ARM/ARMModule.h',
  'arch/Alpha/AlphaDisassembler.h',
  'arch/Alpha/AlphaLinkage.h',
  'arch/Alpha/AlphaMapping.h',
  'arch/Alpha/AlphaModule.h',
  'arch/BPF/BPFConstants.h',
  'arch/BPF/BPFDisassembler.h',
  'arch/BPF/BPFInstPrinter.h',
  'arch/BPF/BPFMapping.h',
  'arch/BPF/BPFModule.h',
  'arch/EVM/EVMDisassembler.h',
  'arch/EVM/EVMInstPrinter.h',
  'arch/EVM/EVMMapping.h',
  'arch/EVM/EVMModule.h',
  'arch/HPPA/HPPAConstants.h',
  'arch/HPPA/HPPADisassembler.h',
  'arch/HPPA/HPPAInstPrinter.h',
  'arch/HPPA/HPPAMapping.h',
  'arch/HPPA/HPPAModule.h',
  'arch/LoongArch/LoongArchDisassemblerExtension.h',
  'arch/LoongArch/LoongArchInstPrinter.h',
  'arch/LoongArch/LoongArchLinkage.h',
  'arch/LoongArch/LoongArchMapping.h',
  'arch/LoongArch/LoongArchModule.h',
  'arch/M680X/M680XDisassembler.h',
  'arch/M680X/M680XDisassemblerInternals.h',
  'arch/M680X/M680XInstPrinter.h',
  'arch/M680X/M680XModule.h',
  'arch/M68K/M68KDisassembler.h',
  'arch/M68K/M68KInstPrinter.h',
  'arch/M68K/M68KModule.h',
  'arch/MOS65XX/MOS65XXDisassembler.h',
  'arch/MOS65XX/MOS65XXDisassemblerInternals.h',
  'arch/MOS65XX/MOS65XXModule.h',
  'arch/Mips/MipsDisassembler.h',
  'arch/Mips/MipsInstPrinter.h',
  'arch/Mips/MipsMapping.h',
  'arch/Mips/MipsModule.h',
  'arch/PowerPC/PPCInstPrinter.h',
  'arch/PowerPC/PPCInstrInfo.h',
  'arch/PowerPC/PPCLinkage.h',
  'arch/PowerPC/PPCMCTargetDesc.h',
  'arch/PowerPC/PPCMapping.h',
  'arch/PowerPC/PPCModule.h',
  'arch/PowerPC/PPCPredicates.h',
  'arch/PowerPC/PPCRegisterInfo.h',
  'arch/RISCV/RISCVBaseInfo.h',
  'arch/RISCV/RISCVDisassembler.h',
  'arch/RISCV/RISCVInstPrinter.h',
  'arch/RISCV/RISCVMapping.h',
  'arch/RISCV/RISCVModule.h',
  'arch/SH/SHDisassembler.h',
  'arch/SH/SHInstPrinter.h',
  'arch/SH/SHModule.h',
  'arch/Sparc/Sparc.h',
  'arch/Sparc/SparcDisassembler.h',
  'arch/Sparc/SparcInstPrinter.h',
  'arch/Sparc/SparcMapping.h',
  'arch/Sparc/SparcModule.h',
  'arch/SystemZ/SystemZDisassembler.h',
  'arch/SystemZ/SystemZInstPrinter.h',
  'arch/SystemZ/SystemZMCTargetDesc.h',
  'arch/SystemZ/SystemZMapping.h',
  'arch/SystemZ/SystemZModule.h',
  'arch/TMS320C64x/TMS320C64xDisassembler.h',
  'arch/TMS320C64x/TMS320C64xInstPrinter.h',
  'arch/TMS320C64x/TMS320C64xMapping.h',
  'arch/TMS320C64x/TMS320C64xModule.h',
  'arch/TriCore/TriCoreDisassembler.h',
  'arch/TriCore/TriCoreLinkage.h',
  'arch/TriCore/TriCoreMapping.h',
  'arch/TriCore/TriCoreModule.h',
  'arch/WASM/WASMDisassembler.h',
  'arch/WASM/WASMInstPrinter.h',
  'arch/WASM/WASMMapping.h',
  'arch/WASM/WASMModule.h',
  'arch/X86/X86BaseInfo.h',
  'arch/X86/X86Disassembler.h',
  'arch/X86/X86DisassemblerDecoder.h',
  'arch/X86/X86DisassemblerDecoderCommon.h',
  'arch/X86/X86InstPrinter.h',
  'arch/X86/X86InstPrinterCommon.h',
  'arch/X86/X86Mapping.h',
  'arch/X86/X86Module.h',
  'arch/XCore/XCoreDisassembler.h',
  'arch/XCore/XCoreInstPrinter.h',
  'arch/XCore/XCoreMapping.h',
  'arch/XCore/XCoreModule.h',
  'cs_priv.h',
  'cs_simple_types.h',
  'include/capstone/aarch64.h',
  'include/capstone/alpha.h',
  'include/capstone/arm.h',
  'include/capstone/arm64.h',
  'include/capstone/bpf.h',
  'include/capstone/capstone.h',
  'include/capstone/cs_operand.h',
  'include/capstone/evm.h',
  'include/capstone/hppa.h',
  'include/capstone/loongarch.h',
  'include/capstone/m680x.h',
  'include/capstone/m68k.h',
  'include/capstone/mips.h',
  'include/capstone/mos65xx.h',
  'include/capstone/platform.h',
  'include/capstone/ppc.h',
  'include/capstone/riscv.h',
  'include/capstone/sh.h',
  'include/capstone/sparc.h',
  'include/capstone/systemz.h',
  'include/capstone/tms320c64x.h',
  'include/capstone/tricore.h',
  'include/capstone/wasm.h',
  'include/capstone/x86.h',
  'include/capstone/xcore.h',
  'include/platform.h',
  'include/windowsce/intrin.h',
  'include/windowsce/stdint.h',
  'utils.h',
]

source_files = [
  'MCInst.c',
  'MCInstPrinter.c',
  'MCInstrDesc.c',
  'MCRegisterInfo.c',
  'Mapping.c',
  'SStream.c',
  'arch/AArch64/AArch64BaseInfo.c',
  'arch/AArch64/AArch64Disassembler.c',
  'arch/AArch64/AArch64DisassemblerExtension.c',
  'arch/AArch64/AArch64InstPrinter.c',
  'arch/AArch64/AArch64Mapping.c',
  'arch/AArch64/AArch64Module.c',
  'arch/ARM/ARMBaseInfo.c',
  'arch/ARM/ARMDisassembler.c',
  'arch/ARM/ARMDisassemblerExtension.c',
  'arch/ARM/ARMInstPrinter.c',
  'arch/ARM/ARMMapping.c',
  'arch/ARM/ARMModule.c',
  'arch/Alpha/AlphaDisassembler.c',
  'arch/Alpha/AlphaInstPrinter.c',
  'arch/Alpha/AlphaMapping.c',
  'arch/Alpha/AlphaModule.c',
  'arch/BPF/BPFDisassembler.c',
  'arch/BPF/BPFInstPrinter.c',
  'arch/BPF/BPFMapping.c',
  'arch/BPF/BPFModule.c',
  'arch/EVM/EVMDisassembler.c',
  'arch/EVM/EVMInstPrinter.c',
  'arch/EVM/EVMMapping.c',
  'arch/EVM/EVMModule.c',
  'arch/HPPA/HPPADisassembler.c',
  'arch/HPPA/HPPAInstPrinter.c',
  'arch/HPPA/HPPAMapping.c',
  'arch/HPPA/HPPAModule.c',
  'arch/LoongArch/LoongArchDisassembler.c',
  'arch/LoongArch/LoongArchDisassemblerExtension.c',
  'arch/LoongArch/LoongArchInstPrinter.c',
  'arch/LoongArch/LoongArchMapping.c',
  'arch/LoongArch/LoongArchModule.c',
  'arch/M680X/M680XDisassembler.c',
  'arch/M680X/M680XInstPrinter.c',
  'arch/M680X/M680XModule.c',
  'arch/M68K/M68KDisassembler.c',
  'arch/M68K/M68KInstPrinter.c',
  'arch/M68K/M68KModule.c',
  'arch/MOS65XX/MOS65XXDisassembler.c',
  'arch/MOS65XX/MOS65XXModule.c',
  'arch/Mips/MipsDisassembler.c',
  'arch/Mips/MipsInstPrinter.c',
  'arch/Mips/MipsMapping.c',
  'arch/Mips/MipsModule.c',
  'arch/PowerPC/PPCDisassembler.c',
  'arch/PowerPC/PPCInstPrinter.c',
  'arch/PowerPC/PPCMapping.c',
  'arch/PowerPC/PPCModule.c',
  'arch/RISCV/RISCVDisassembler.c',
  'arch/RISCV/RISCVInstPrinter.c',
  'arch/RISCV/RISCVMapping.c',
  'arch/RISCV/RISCVModule.c',
  'arch/SH/SHDisassembler.c',
  'arch/SH/SHInstPrinter.c',
  'arch/SH/SHModule.c',
  'arch/Sparc/SparcDisassembler.c',
  'arch/Sparc/SparcInstPrinter.c',
  'arch/Sparc/SparcMapping.c',
  'arch/Sparc/SparcModule.c',
  'arch/SystemZ/SystemZDisassembler.c',
  'arch/SystemZ/SystemZInstPrinter.c',
  'arch/SystemZ/SystemZMCTargetDesc.c',
  'arch/SystemZ/SystemZMapping.c',
  'arch/SystemZ/SystemZModule.c',
  'arch/TMS320C64x/TMS320C64xDisassembler.c',
  'arch/TMS320C64x/TMS320C64xInstPrinter.c',
  'arch/TMS320C64x/TMS320C64xMapping.c',
  'arch/TMS320C64x/TMS320C64xModule.c',
  'arch/TriCore/TriCoreDisassembler.c',
  'arch/TriCore/TriCoreInstPrinter.c',
  'arch/TriCore/TriCoreMapping.c',
  'arch/TriCore/TriCoreModule.c',
  'arch/WASM/WASMDisassembler.c',
  'arch/WASM/WASMInstPrinter.c',
  'arch/WASM/WASMMapping.c',
  'arch/WASM/WASMModule.c',
  'arch/X86/X86ATTInstPrinter.c',
  'arch/X86/X86Disassembler.c',
  'arch/X86/X86DisassemblerDecoder.c',
  'arch/X86/X86InstPrinterCommon.c',
  'arch/X86/X86IntelInstPrinter.c',
  'arch/X86/X86Mapping.c',
  'arch/X86/X86Module.c',
  'arch/XCore/XCoreDisassembler.c',
  'arch/XCore/XCoreInstPrinter.c',
  'arch/XCore/XCoreMapping.c',
  'arch/XCore/XCoreModule.c',
  'cs.c',
  'utils.c',
]

extra_files = [
]

include_dirs = [
  'include',
]

build_args = [
  '-DCAPSTONE_X86_ATT_DISABLE_NO',
  '-DCAPSTONE_DIET_NO',
  '-DCAPSTONE_X86_REDUCE_NO',
  '-DCAPSTONE_HAS_ARM',
  '-DCAPSTONE_HAS_ARM64',
  '-DCAPSTONE_HAS_M68K',
  '-DCAPSTONE_HAS_MIPS',
  '-DCAPSTONE_HAS_POWERPC',
  '-DCAPSTONE_HAS_SPARC',
  '-DCAPSTONE_HAS_SYSZ',
  '-DCAPSTONE_HAS_X86',
  '-DCAPSTONE_HAS_XCORE',
  '-DCAPSTONE_USE_SYS_DYN_MEM'
]

capstone = static_library(
  'capstone',
  header_files,
  source_files,
  include_directories: include_dirs,
  c_args: default_c_args + build_args,
  cpp_args: default_cpp_args + build_args,
  override_options: {
    'werror': false,
  }
)

capstone_dep = declare_dependency(
  include_directories: include_dirs,
  link_with: [capstone],
)

all_deps += capstone
